# opsvis

./: .gitignore  .readthedocs.yaml  README.md  requirements.txt  setup.cfg
.github/workflows/: publish-to-test-pypi.yml
doc/src/: Gallery.rst  GettingStarted.rst  conf.py  ex_2d_portal_frame.rst  index.rst  plot_defo.rst  plot_extruded_model_rect_section_3d.rst  plot_load.rst  plot_model.rst  plot_reactions.rst  plot_stress.rst  requirements.txt  section_force_diagram_2d.rst
doc/src/examples/: brick20n_eps_el1.xml  brick20n_sigGP_el1.xml  brick_test_1_tris_pyevt.vtu  demo_cantilever_3el_3d.py  demo_plot_fiber_section.py  demo_portal_frame.py  demo_portal_frame_time_history_anim.py  demo_quads_4x4.py  demo_ssi_portal_frame.py  demo_ssi_portal_frame_fiber_section.py
docs/src/: anim_defo.rst  anim_mode.rst  conf.py  ex_2d_portal_frame.rst  ex_2d_portal_frame_th_mode_anim.rst  ex_3d_3el_cantilever.rst  ex_plot_fiber_section.rst  ex_quads_4x4.rst  examples.rst  fib_sec_list_to_cmds.rst  index.rst  plot_defo.rst  plot_extruded_model_rect_section_3d.rst  plot_fiber_section.rst  plot_mode_shape.rst  plot_model.rst  plot_stress_2d.rst  plot_supports_and_loads_2d.rst  quad_sig_out_per_node.rst  section_force_diagram_2d.rst  section_force_diagram_3d.rst
docs/src/examples/: demo_cantilever_3el_3d.py  demo_plot_fiber_section.py  demo_portal_frame.py  demo_portal_frame_time_history_anim.py  demo_quads_4x4.py
opsvis/: __init__.py  anim.py  defo.py  fibsec.py  model.py  secforces.py  settings.py  stress.py
src/opsvis/: __init__.py  ops_vis.py  opsvis.py
(+2 files in other folders)
