[metadata]
name = opsvis
version = 0.94.8
author = Seweryn Kokot
author_email = sewkokot@gmail.com
description = OpenSeesPy (OpenSees) Python postprocessing and visualization module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sewkokot/ops_vis
project_urls =
    Bug Tracker = https://github.com/sewkokot/ops_vis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
