[metadata]
name = opsvis
version = 1.1.4
author = Seweryn Kokot
author_email = sewkokot@gmail.com
description = OpenSeesPy (OpenSees) Python postprocessing and visualization module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sewkokot/opsvis
project_urls =
    Bug Tracker = https://github.com/sewkokot/opsvis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    openseespy
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
